--- a/wgscovplot/tmpl/amplicon_covplot_template.html
+++ b/wgscovplot/tmpl/amplicon_covplot_template.html
@@ -659,12 +659,20 @@
             var total = 0;
             if (start < end){
                 for (var i = start - 1; i <= end - 1; i++){
+                    if (depths[gridIndex][i] === 1E-6){
+                        continue
+                    }   
                     total +=  depths[gridIndex][i]
                 }
                 return total/(end-start+1)
             }
             else if (start == end){
-                return depths[gridIndex][start]
+                if (depths[gridIndex][start] === 1E-6){
+                    return 0
+                }
+                else{
+                    return depths[gridIndex][start]
+                } 
             }
         }
 
@@ -681,10 +689,25 @@
         function median(arr) {
             arr.sort( function(a,b) {return a - b;} );
             var half = Math.floor(arr.length/2);
-            if(arr.length % 2)
-                return arr[half];
+            if(arr.length % 2){
+                if (arr[half] === 1E-6){
+                    return 0
+                }
+                else{
+                    return arr[half];
+                }
+            } 
             else
-                return (arr[half-1] + arr[half]) / 2.0;
+                if (arr[half-1] != 1E-6 && arr[half] != 1E-6)
+                    return (arr[half-1] + arr[half]) / 2.0;
+                else{
+                    if (arr[half-1] === 1E-6){
+                        return arr[half] /2.0
+                    }
+                    else if (arr[half] === 1E-6){
+                        return arr[half - 1] / 2.0
+                    }
+                }
         }
 
         function medianCoverage(depths, start, end, gridIndex) {
