--- a/wgscovplot/tmpl/covplot_template.html
+++ b/wgscovplot/tmpl/covplot_template.html
@@ -117,6 +117,7 @@
             {% include "controlmenu/tooltip.js" %}
             {% include "controlmenu/data_zoom.js" %}
             {% include "controlmenu/common.js" %}
+            {% include "controlmenu/coverage_stat.js" %}
         </script>
     {% endblock %}
 </body>
