--- a/wgscovplot/tmpl/control_menu_design.html
+++ b/wgscovplot/tmpl/control_menu_design.html
@@ -160,6 +160,23 @@
                     </div>
                 </div>
             </div>
+            {% if amplicon == True %}
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#amplicon" aria-expanded="false" aria-controls="amplicon">
+                        Amplicon
+                    </button>
+                </h2>
+                <div id="amplicon" class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                        <div class="form-check form-switch">
+                            <label class="form-check-label" for="toggleamplicondepthlabel">Amplicon Depth</label>
+                            <input class="form-check-input" type="checkbox" id="toggleamplicondepthlabel" unchecked>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
         </div>
     </div>
 </div>
